fix(forms): top alignment of checkbox label

--- a/src/forms.scss
+++ b/src/forms.scss
@@ -153,7 +153,7 @@ label ~ .input-control {
         height: spacing('1');
         left: -1.5rem;
         position: absolute;
-        top: 5.7px;
+        top: 5.25px;
         transition: all 300ms;
         width: spacing('1');
       }
